# Human-Tracker-Bot

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  requirements.sh  run_cppcheck.sh  run_cpplint.sh
Proposal_documentation/: product_backlog.xlsx
app/: AutoBot.cpp  CMakeLists.txt  Detector.cpp  HumanTracker.cpp  Utils.cpp  main.cpp
docs/: Doxyfile
docs/html/: _auto_bot_8cpp.html  _auto_bot_8cpp__incl.map  _auto_bot_8cpp__incl.md5  _auto_bot_8hpp.html  _auto_bot_8hpp.js  _auto_bot_8hpp__dep__incl.map  _auto_bot_8hpp__dep__incl.md5  _auto_bot_8hpp__incl.map  _auto_bot_8hpp__incl.md5  _auto_bot_8hpp_source.html  _detector_8cpp.html  _detector_8cpp__incl.map  _detector_8cpp__incl.md5  _detector_8hpp.html  _detector_8hpp__dep__incl.map  _detector_8hpp__dep__incl.md5  _detector_8hpp__incl.map  _detector_8hpp__incl.md5  _detector_8hpp_source.html  _human_tracker_8cpp.html  _human_tracker_8cpp__incl.map  _human_tracker_8cpp__incl.md5  _human_tracker_8hpp.html  _human_tracker_8hpp__dep__incl.map  _human_tracker_8hpp__dep__incl.md5  _human_tracker_8hpp__incl.map  _human_tracker_8hpp__incl.md5  _human_tracker_8hpp_source.html  _utils_8cpp.html  _utils_8cpp__incl.map  _utils_8cpp__incl.md5  _utils_8hpp.html  _utils_8hpp__dep__incl.map  _utils_8hpp__dep__incl.md5  _utils_8hpp__incl.map  _utils_8hpp__incl.md5  _utils_8hpp_source.html  annotated.html  annotated_dup.js  classacme_1_1_auto_bot-members.html  (+31 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
include/: AutoBot.h  AutoBot.hpp  Detector.h  Detector.hpp  HumanTracker.h  HumanTracker.hpp  Utils.h  Utils.hpp
results/: cppcheck.txt  cpplint.txt  log_valgrind.txt  valgrind_output.txt
test/: CMakeLists.txt  main.cpp  test.cpp
